--- a/style.css
+++ b/style.css
@@ -1,27 +1,3 @@
-.btn-matrix > .btn:nth-child(2n+3) {
-    clear: left;
-    margin-left: 0;
-  }
-  .btn-matrix > .btn:nth-child(n+3) {
-    margin-top: -1px;
-  }
-  .btn-matrix > .btn:first-child {
-    border-bottom-left-radius: 0;
-  }
-  .btn-matrix > .btn:nth-child(2) {
-    border-top-right-radius: 4px !important;
-  }
-  .btn-matrix > .btn:nth-last-child(2) {
-    border-bottom-left-radius: 4px !important;
-  }
-  .btn-matrix > .btn:last-child {
-    border-top-right-radius: 0;
-  }
-
-  #partySize {
-      font-size: 2em;
-  }
-
   .spinner {
     width: 100%;
     height: 100px;
@@ -92,11 +68,11 @@
     }
 }
 
-table tr td:last-child {
+table.table tr td:last-child {
     width: 15em;
 }
 
-table tr td:last-child a:first-child {
+table.table tr td:last-child a:first-child {
     margin-right: 1em;
 }
 
