--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     text-align: center;
     width: 50%;
     font-size: 2em;
-    height: 100%;
+    height: 100px;
   }
 
   .input-group-btn-vertical {
@@ -16,7 +16,7 @@
     width: 50%;
     vertical-align: middle;
     display: inline-block;
-    height: 100%;
+    height: 100px;
   }
   .input-group-btn-vertical > .btn {
     display: block;
@@ -27,7 +27,7 @@
     margin-left: -1px;
     position: relative;
     border-radius: 0;
-    height: 50%;
+    height: 50px;
     margin-top: 1px;
   }
   .input-group-btn-vertical > .btn:first-child {
