--- a/style.css
+++ b/style.css
@@ -42,6 +42,16 @@
     left: 2px;
   }
 
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
   #timePickerGroup {
       float: left;
   }
